--- a/companyblog/templates/account.html
+++ b/companyblog/templates/account.html
@@ -1,30 +1,33 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="container-fluid bg-dark text-light p-5">
-    <div class="container bg-dark p-5">
-        <h1 class="display-4">Welcome to the page for {{current_user.username}}</h1>
-        <img src="{{url_for('static', filename='profile_pics/'+current_user.profile)}}" align = 'center'>
+
+<div class="jumbotron">
+  <div align='center'>
+    <h1 >Welcome to the page for {{current_user.username}}</h1>
+    <img align='center' src="{{ url_for('static', filename='profile_pics/' + current_user.profile_image) }}">
+    <p>{{ current_user.email }}</p>
+  </div>
+</div>
+<div class="container">
+  <form  method="POST" enctype="multipart/form-data">
+    {{ form.hidden_tag() }}
+    <div class="form-group">
+      {{ form.username.label(class="form-group") }}
+      {{form.username(class='form-control')  }}
+    </div
+    <div class="form-group">
+      {{ form.email.label(class="form-group") }}
+      {{form.email(class='form-control')  }}
     </div>
+    <div class="form-group">
+      {{ form.picture.label(class="form-group") }}
+      {{ form.picture(class="form-control-file") }}
+    </div>
+    <div class="form-group">
+        {{ form.submit(class="btn btn-primary") }}
+    </div>
+  </form>
+
 </div>
 
-<div class="container">
-    <form method="post">
-    {{form.hidden_tag()}}    
-    <div class="form-group">
-        {{form.username.label(class='form-group')}}
-        {{form.username(class='form-control')}}
-    </div>
-    <div class="form-group">
-        {{form.email.label(class='form-group')}}
-        {{form.email(class='form-control')}}
-    </div>    
-    <div class="form-group">
-        {{form.picture.label(class='form-group')}}
-        {{form.picture(class='form-control')}}
-    </div>
-    <div class="form-group">
-        {{form.submit(class='btn btn-primary')}}
-    </div>       
-    </form>
-</div>
-{% endblock %}
+{% endblock content %}
