--- a/companyblog/templates/index.html
+++ b/companyblog/templates/index.html
@@ -1,8 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="container-fluid bg-dark text-light p-5">
-    <div class="container bg-dark p-5">
-        <h1 class="display-4">Puppy Company Blog</h1>
-    </div>
-</div>
+  <div class="jumbotron">
+    <h1>Puppy Company Blog</h1>
+  </div>
 {% endblock %}
